<resources>
    <string name="app_name">CropDex</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="date">Date: %s</string>
    <string name="app_desc">Cropdex is an android application that helps farmers stay connected to each other and learn and grow together with technology.</string>
    <string name="create_account">Create New account</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="google" translatable="false">Google</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="agrotech">AgroTech</string>
    <string name="forum">Forum</string>
    <string name="create">Create</string>
    <string name="inventory">Mandi Prices</string>
    <string name="profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="add_inventory_item">Add Inventory Item</string>
    <string name="create_new_post">Create New Post</string>
    <string name="languageName">English</string>
    <string name="logout">Log out</string>
    <string name="edit">Edit</string>
    <string name="not_given">Not given</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="change_language">Change Language</string>
    <string name="quality">Quality: %s</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="go_back">Go back</string>
    <string name="hashtags">Hashtags</string>
    <string name="comment">Comments</string>
    <string name="write_a_comment">Write a comment...</string>
</resources>