<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainScreenGreen"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".ui.adminstration.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_url="https://assets1.lottiefiles.com/packages/lf20_zw0djhar.json" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            app:endIconMode="clear_text"
            app:placeholderText="abc@gmail.com">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:backgroundTint="@color/white"
            android:text="@string/login"
            android:textColor="@color/black"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/googleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/holo_red_dark"
                android:drawableLeft="@drawable/googleg_disabled_color_18"
                android:text="@string/google"
                android:textColor="@color/white"
                app:cornerRadius="5dp" />

            <Button
                android:id="@+id/fbButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/mainScreenBlue"
                android:text="@string/facebook"
                android:textColor="@color/white"
                app:cornerRadius="5dp" />
        </LinearLayout>

        <Button
            android:id="@+id/toSignUp"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/create_account"
            android:textColor="@color/black"
            app:cornerRadius="5dp" />

    </LinearLayout>
</LinearLayout>